# LLM_MCP_service_scratch

./: README.md  mcp_course.md
mcp-zero-to-one-course/: README.md  main.py  pyproject.toml
mcp-zero-to-one-course/01_why_mcp/: slides.md
mcp-zero-to-one-course/01_why_mcp/diagrams/: agent_loop.mermaid
mcp-zero-to-one-course/02_what_is_mcp/: before_after_comparison.md  slides.md
mcp-zero-to-one-course/03_core_concepts/: slides.md
mcp-zero-to-one-course/03_core_concepts/schema_samples/: tool_schema.json
mcp-zero-to-one-course/04_protocol_basics/: slides.md
mcp-zero-to-one-course/04_protocol_basics/sequence_charts/: handshake.mermaid  tool_execution.mermaid
mcp-zero-to-one-course/05_first_mcp_server/: README.md
mcp-zero-to-one-course/05_first_mcp_server/guides/: inspector_guide.md
mcp-zero-to-one-course/05_first_mcp_server/labs/: basic_tool.py  resources_prompts.py
mcp-zero-to-one-course/06_mcp_clients/configs/: claude_desktop_config.json
mcp-zero-to-one-course/06_mcp_clients/guides/: claude_integration_guide.md
mcp-zero-to-one-course/06_mcp_clients/labs/: client.py
mcp-zero-to-one-course/07_remote_advanced/: slides.md
mcp-zero-to-one-course/07_remote_advanced/guides/: docker_deploy.md
mcp-zero-to-one-course/07_remote_advanced/labs/: Dockerfile  remote_server.py
mcp-zero-to-one-course/08_security_future/: security_checklist.md  slides.md
mcp-zero-to-one-course/09_final_project/: project_brief.md  project_guide.md
mcp-zero-to-one-course/docs/: uv_guide.md  wbs.md
