[project]
name = "mcp-zero-to-one-course"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.14.3",
    "matplotlib>=3.10.8",
    "mcp[cli]>=1.25.0",
    "numpy>=2.4.1",
    "pandas>=2.3.3",
    "pydantic>=2.12.5",
    "starlette>=0.51.0",
    "uvicorn>=0.40.0",
]
